--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content=" Discover how Wayback Restorer's URL correction feature improves SEO by ensuring valid links, enhancing user experience">
 
  <meta name="robots" content="index,follow"> 
-  <link rel="canonical" href="https://restorer.pages.dev">
+  <link rel="canonical" href="https://wabarestorer.pages.dev">
  
  
   <style>
